# gnomad

./: CLAUDE.md  Cargo.toml  README.md  gnomad_buildspec.md
assets/misc/: logos.conf
assets/templates/: gnome-shell.css  gtk3-body.css
src/: app.rs  config.rs  main.rs  state.rs
src/pipeline/: gnome.rs  gowall.rs  gtk_css.rs  mod.rs  palette.rs  shade.rs  shell_css.rs  steam_css.rs  tinty.rs  wallpaper_cache.rs
src/schemes/: fetch.rs  types.rs
src/ui/: animation.rs  mod.rs  scheme_browser.rs  wallpaper_picker.rs
