[package]
name = "gnomad"
version = "0.3.3"
edition = "2021"
description = "A lightweight TUI for managing tinted color schemes in the GNOME shell"
readme = "README.md"
repository = "https://github.com/GooseRooster/gnomad"
license = "GPL-3.0-or-later"
keywords = ["tui", "theming"]
categories = ["command-line-interface", "os::linux-apis"]

[dependencies]
ratatui = "0.29"
crossterm = { version = "0.28", features = ["event-stream"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
toml = "0.8"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dirs = "5"
tokio-stream = "0.1"
ratatui-image = "3"
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "webp", "gif", "bmp"] }
which = "6"
futures = "0.3"
unicode-width = "0.2"
